--- a/src/proj/DBCourseWork/DataBaseUI/MainWindow.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/MainWindow.xaml
@@ -4,8 +4,26 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DataBaseUI"
+        xmlns:viewmodels="clr-namespace:DataBaseUI.ViewModels"
+        xmlns:views="clr-namespace:DataBaseUI.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+
+    <Window.Resources>
+        <DataTemplate x:Key="shopsViewTemplate" DataType="{x:Type viewmodels:ShopsViewModel}">
+            <views:ShopsView DataContext="{Binding}"/>
+        </DataTemplate>
+        <DataTemplate x:Key="productsViewTemplate" DataType="{x:Type viewmodels:ProductsViewModel}">
+            <views:ProductsView DataContext="{Binding}"/>
+        </DataTemplate>
+        <DataTemplate x:Key="salereceiptsViewTemplate" DataType="{x:Type viewmodels:SaleReceiptsViewModel}">
+            <views:SaleReceiptsView DataContext="{Binding}"/>
+        </DataTemplate>
+        <DataTemplate x:Key="coststoryViewTemplate" DataType="{x:Type viewmodels:CostStoryViewModel}">
+            <views:CostStoryView DataContext="{Binding}"/>
+        </DataTemplate>
+    </Window.Resources>
+
     <StackPanel>
         <Menu>
             <MenuItem x:Name="AccessResume" Header="Режим доступа">
@@ -18,20 +36,16 @@
         </Menu>
 
         <TabControl>
-            <TabItem Header="Магазины">
-                
+            <TabItem Header="Магазины" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" DataContext="{Binding Source=ShopsView}">
             </TabItem>
-            <TabItem Header="Продукты">
-                
+            <TabItem Header="Продукты" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+
             </TabItem>
-            <TabItem Header="Товарные чеки">
-                
+            <TabItem Header="Товарные чеки" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+
             </TabItem>
-            <TabItem Header="История цен">
-                
-            </TabItem>
-            <TabItem Header="Прогноз цены">
-                
+            <TabItem Header="Прогноз цены" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+
             </TabItem>
         </TabControl>
     </StackPanel>
