--- a/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:DataBaseUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Blue">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
