--- a/src/proj/DBCourseWork/DataBaseUI/Views/ProductsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/ProductsView.xaml
@@ -7,7 +7,7 @@
              xmlns:views="clr-namespace:DataBaseUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Green">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
