--- a/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
@@ -8,7 +8,7 @@
              xmlns:views="clr-namespace:DataBaseUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Aqua">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
