--- a/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
@@ -14,8 +14,8 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="1.3*"/>
+            <RowDefinition Height="0.7*"/>
         </Grid.RowDefinitions>
 
         <ListBox Grid.Column="0" Grid.RowSpan="2" ItemsSource="{Binding Shops}"
@@ -30,12 +30,27 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <StackPanel Grid.Column="1" DataContext="{Binding SelectedShop}" Margin="25">
-            <TextBlock Text="Выбранный магазин" FontSize="18" />
-            <TextBlock Text="Название" />
-            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True"/>
-            <TextBlock Text="Описание" />
-            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True"/>
-        </StackPanel>
+        <DockPanel Grid.Column="1" DataContext="{Binding SelectedShop}" Margin="20">
+            <TextBlock Text="Выбранный магазин" FontSize="20" DockPanel.Dock="Top"/>
+            <TextBlock Text="Название" FontSize="15" Margin="0, 5, 0, 0" DockPanel.Dock="Top"/>
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" FontSize="16" Margin="5, 0, 50, 10" DockPanel.Dock="Top"/>
+            <TextBlock Text="Описание" FontSize="15" Margin="0, 5, 0, 0" DockPanel.Dock="Top"/>
+            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" FontSize="16" Margin="5, 0, 50, 0" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" DockPanel.Dock="Top"/>
+        </DockPanel>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Button Content="Добавить магазин" Grid.Column="0" Grid.Row="0" Margin="20" Command="{Binding Path=AddCommand}" CommandParameter="{Binding }" IsEnabled="False" Visibility="Hidden"/>
+            <Button Content="Удалить магазин" Grid.Column="1" Grid.Row="0" Margin="20" Command="{Binding Path=DeleteCommand}" CommandParameter="{Binding Path=SelectedShop}"/>
+            <Button Content="Обновить магазин" Grid.Row="1" Grid.ColumnSpan="2" Margin="110 , 20, 110, 20" />
+        </Grid>
     </Grid>
 </UserControl>
