--- a/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
@@ -2,10 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DataBaseUI.Views"
-             xmlns:viewmodels="clr-namespace:DataBaseUI.ViewModels"
-             xmlns:views="clr-namespace:DataBaseUI.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -18,13 +15,13 @@
             <RowDefinition Height="0.7*"/>
         </Grid.RowDefinitions>
 
-        <ListBox Grid.Column="0" Grid.RowSpan="2" ItemsSource="{Binding Shops}"
+        <ListBox x:Name="ShopsListBox" Grid.Column="0" Grid.RowSpan="2" ItemsSource="{Binding Shops}" 
                  SelectedItem="{Binding SelectedShop}" Margin="25" BorderBrush="Black" BorderThickness="2">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5">
-                        <TextBlock FontSize="18" Text="{Binding Path=Name}" />
-                        <TextBlock Text="{Binding Path=Description}" />
+                        <TextBlock FontSize="18" Text="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" />
+                        <TextBlock FontSize="15" Text="{Binding Path=Description, UpdateSourceTrigger=PropertyChanged}" />
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -50,7 +47,7 @@
 
             <Button Content="Добавить магазин" Grid.Column="0" Grid.Row="0" Margin="20" Command="{Binding Path=AddCommand}" CommandParameter="{Binding }" IsEnabled="{Binding }" Visibility="{Binding }"/>
             <Button Content="Удалить магазин" Grid.Column="1" Grid.Row="0" Margin="20" Command="{Binding Path=DeleteCommand}" CommandParameter="{Binding Path=SelectedShop}" IsEnabled="{Binding }" Visibility="{Binding }"/>
-            <Button Content="Обновить магазин" Grid.Row="1" Grid.ColumnSpan="2" Margin="110 , 20, 110, 20" Command="{Binding Path=UpdateCommand}" IsEnabled="{Binding }" Visibility="{Binding }"/>
+            <Button Content="Обновить магазин" Grid.Row="1" Grid.ColumnSpan="2" Margin="110 , 20, 110, 20" Command="{Binding Path=UpdateCommand}" CommandParameter="{Binding Path=SelectedShop}" IsEnabled="{Binding }" Visibility="{Binding }"/>
         </Grid>
     </Grid>
 </UserControl>
