--- a/src/proj/DBCourseWork/DataBaseUI/Views/SaleReceiptsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/SaleReceiptsView.xaml
@@ -7,6 +7,66 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1.5*"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+
+        <ListBox Margin="15" ItemsSource="{Binding SaleReceipts}" SelectedItem="{Binding SelectedSaleReceipt}" Grid.RowSpan="2">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <DockPanel>
+                        <TextBlock FontSize="15" VerticalAlignment="Center" Margin="3" Text="{Binding Path=Fio, UpdateSourceTrigger=PropertyChanged}" />
+                        <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="Black" />
+                        <TextBlock FontSize="13" VerticalAlignment="Center" Margin="3" Text="{Binding Path=DateOfPurchase, UpdateSourceTrigger=PropertyChanged}" />
+                        <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="Black" />
+                        <TextBlock FontSize="14" VerticalAlignment="Center" Margin="3" Text="{Binding Path=SummaryCost, UpdateSourceTrigger=PropertyChanged}" />
+                    </DockPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <ListBox Margin="15" ItemsSource="{Binding SaleReceiptPositions}" SelectedItem="{Binding SelectedSaleReceiptPosition}" Grid.Column="1">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <DockPanel>
+                        <TextBlock FontSize="15" VerticalAlignment="Center" Margin="3" Text="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" />
+                        <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="Black" />
+                        <TextBlock FontSize="13" VerticalAlignment="Center" Margin="3" Text="{Binding Path=ProductType, UpdateSourceTrigger=PropertyChanged}" />
+                        <Rectangle VerticalAlignment="Stretch" Width="1" Margin="2" Stroke="Black" />
+                        <TextBlock FontSize="14" VerticalAlignment="Center" Margin="3" Text="{Binding Path=Cost, UpdateSourceTrigger=PropertyChanged}" />
+                    </DockPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Button Content="Добавить чек" Margin="10" Command="{Binding Path=AddSRCommand}"/>
+            <Button  Margin="10" Grid.Row="1" Command="{Binding Path=AddSRPCommand}" CommandParameter="{Binding SelectedSaleReceipt}">
+                <Button.Content>
+                    <TextBlock Text="Добавить позицию в чек" TextWrapping="Wrap"/>
+                </Button.Content>
+            </Button>
+
+            <Button Content="Удалить чек" Margin="10" Grid.Column="1" Command="{Binding Path=DeleteSRCommand}" CommandParameter="{Binding Path=SelectedSaleReceipt}"/>
+            <Button Margin="10" Grid.Column="1" Grid.Row="1" Command="{Binding Path=DeleteSRPCommand}" CommandParameter="{Binding Path=SelectedSaleReceiptPosition}">
+                <Button.Content>
+                    <TextBlock Text="Удалить позицию в чеке" TextWrapping="Wrap"/>
+                </Button.Content>
+            </Button>
+        </Grid>
     </Grid>
 </UserControl>
