--- a/src/proj/DBCourseWork/DataBaseUI/App.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:DataBaseUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
     </Application.Resources>
 </Application>
