--- a/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
@@ -7,7 +7,7 @@
              xmlns:oxyplot="http://oxyplot.org/wpf"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid IsEnabled="{Binding IsAnalyst}" Visibility="{Binding IsAnalyst, Converter={StaticResource BoolToVis}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -41,9 +41,9 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Button Content="Добавить новую цену" Margin="7.5" Command="{Binding AddCommand}"/>
-            <Button Content="Удалить цену из истории" Margin="7.5" Grid.Column="1" Command="{Binding DeleteCommand}" CommandParameter="{Binding SelectedCostStory}"/>
-            <Button Content="Изменить данные о цене" Grid.Row="1" Grid.ColumnSpan="2" Margin="90, 7.5, 90, 7.5" Command="{Binding UpdateCommand}" CommandParameter="{Binding SelectedCostStory}"/>
+            <Button Content="Добавить новую цену" Margin="7.5" Command="{Binding AddCommand}" IsEnabled="{Binding IsAdmin}" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVis}}"/>
+            <Button Content="Удалить цену из истории" Margin="7.5" Grid.Column="1" Command="{Binding DeleteCommand}" CommandParameter="{Binding SelectedCostStory}" IsEnabled="{Binding IsAdmin}" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVis}}"/>
+            <Button Content="Изменить данные о цене" Grid.Row="1" Grid.ColumnSpan="2" Margin="90, 7.5, 90, 7.5" Command="{Binding UpdateCommand}" CommandParameter="{Binding SelectedCostStory}" IsEnabled="{Binding IsAdmin}" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVis}}"/>
         </Grid>
 
         <Grid Grid.Column="1" Grid.Row="0">
