--- a/src/proj/DBCourseWork/DataBaseUI/Views/SaleReceiptsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/SaleReceiptsView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:DataBaseUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid IsEnabled="{Binding IsAdmin}" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVis}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
