--- a/src/proj/DBCourseWork/DataBaseUI/Views/DialogWindows/PasswordWindow.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/DialogWindows/PasswordWindow.xaml
@@ -6,10 +6,10 @@
         xmlns:local="clr-namespace:DataBaseUI.Views.DialogWindows"
         mc:Ignorable="d"
         Title="Ввод пароля" Height="100" Width="250">
-    <StackPanel>
+    <StackPanel Background="DimGray">
         <DockPanel Margin="3">
             <TextBlock Text="Введите пароль:" Margin="5"/>
-            <TextBox x:Name="PasswordField" Margin="3"/>
+            <TextBox x:Name="PasswordField" Margin="3" Background="LightGray"/>
         </DockPanel>
         <Button Content="Ок" Click="Button_Click" Margin="50, 5, 50, 5"/>
     </StackPanel>
