--- a/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
 
-        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding ProductCostStory}" SelectedItem="{Binding SelectedCostStory}" Grid.RowSpan="2">
+        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding ProductCostStory}" SelectedItem="{Binding SelectedCostStory}" Grid.RowSpan="2" Background="LightGray">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Год" FontSize="15" Binding="{Binding Path=Year, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Месяц" FontSize="13" Binding="{Binding Path=Month, UpdateSourceTrigger=PropertyChanged}" />
@@ -46,8 +46,8 @@
                 <RowDefinition Height="0.18*"/>
                 <RowDefinition Height="0.07*"/>
             </Grid.RowDefinitions>
-            
-            <oxyplot:PlotView Model="{Binding TrendLinePlot, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Margin="15"/>
+
+            <oxyplot:PlotView Model="{Binding TrendLinePlot, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" Margin="15" Background="LightGray"/>
 
             <StackPanel Grid.Row="1" VerticalAlignment="Center">
                 <TextBlock Text="Функция тренда цены" Margin="1" HorizontalAlignment="Center"/>
