--- a/src/proj/DBCourseWork/DataBaseUI/Views/SaleReceiptsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/SaleReceiptsView.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
 
-        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding SaleReceipts}" SelectedItem="{Binding SelectedSaleReceipt}" Grid.RowSpan="2">
+        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding SaleReceipts}" SelectedItem="{Binding SelectedSaleReceipt}" Grid.RowSpan="2" Background="LightGray">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ФИО" FontSize="15" Binding="{Binding Path=Fio, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Дата покупки" FontSize="13" Binding="{Binding Path=DateOfPurchase, UpdateSourceTrigger=PropertyChanged}" />
@@ -24,7 +24,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding SaleReceiptPositions}" SelectedItem="{Binding SelectedSaleReceiptPosition}" Grid.Column="1">
+        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding SaleReceiptPositions}" SelectedItem="{Binding SelectedSaleReceiptPosition}" Grid.Column="1" Background="LightGray">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Имя" FontSize="15" Binding="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Тип продукта" FontSize="13" Binding="{Binding Path=ProductType, UpdateSourceTrigger=PropertyChanged}" />
