--- a/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/ShopsView.xaml
@@ -16,7 +16,7 @@
         </Grid.RowDefinitions>
 
         <ListBox x:Name="ShopsListBox" Grid.Column="0" Grid.RowSpan="2" ItemsSource="{Binding Shops}" 
-                 SelectedItem="{Binding SelectedShop}" Margin="25" BorderBrush="Black" BorderThickness="2">
+                 SelectedItem="{Binding SelectedShop}" Margin="25" BorderBrush="Black" BorderThickness="2" Background="LightGray">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="5">
@@ -30,9 +30,9 @@
         <DockPanel Grid.Column="1" DataContext="{Binding SelectedShop}" Margin="20">
             <TextBlock Text="Выбранный магазин" FontSize="20" DockPanel.Dock="Top"/>
             <TextBlock Text="Название" FontSize="15" Margin="0, 5, 0, 0" DockPanel.Dock="Top"/>
-            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" FontSize="16" Margin="5, 0, 50, 10" DockPanel.Dock="Top"/>
+            <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" FontSize="16" Margin="5, 0, 50, 10" DockPanel.Dock="Top" Background="LightGray"/>
             <TextBlock Text="Описание" FontSize="15" Margin="0, 5, 0, 0" DockPanel.Dock="Top"/>
-            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" FontSize="16" Margin="5, 0, 50, 0" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" DockPanel.Dock="Top"/>
+            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" FontSize="16" Margin="5, 0, 50, 0" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" DockPanel.Dock="Top" Background="LightGray"/>
         </DockPanel>
 
         <Grid Grid.Row="1" Grid.Column="1">
