--- a/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
+++ b/src/proj/DBCourseWork/DataBaseUI/Views/CostStoryView.xaml
@@ -17,7 +17,7 @@
             <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
 
-        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding ProductCostStory}" SelectedItem="{Binding SelectedCostStory}" Grid.RowSpan="2" Background="LightGray">
+        <DataGrid Margin="15" AutoGenerateColumns="False" ItemsSource="{Binding ProductCostStory}" SelectedItem="{Binding SelectedCostStory}" Grid.RowSpan="2" Background="LightGray" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Год" FontSize="15" Binding="{Binding Path=Year, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTextColumn Header="Месяц" FontSize="13" Binding="{Binding Path=Month, UpdateSourceTrigger=PropertyChanged}" />
